code/DMC/mythril/analysis/module/modules/duduDSLParser.py
# Generated from duduDSL.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class duduDSLParser ( Parser ):

    grammarFileName = "duduDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'def'", "'let'", "'if'", "'else'", "'for'", "'transferEth'", 
                     "'transfer'", "'approve'", "'nftApprove'", "'transferFrom'", 
                     "'nftTransferFrom'", "'custom'", "'msg.sender'", "'calldata'", 
                     "'sha3'", "'sload'", "'mload'", "'mstore'", "'length'", 
                     "'concat'", "'sstore'", "'K'", "'BitVec'", "'Int'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", "'x'", 
                     "'<<'", "'>>'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "';'", "'='" ]

    symbolicNames = [ "<INVALID>", "ArithOp", "RelOp", "BitOp", "DEF", "LET", 
                      "IF", "ELSE", "FOR", "TRANSFERETH", "TRANSFER", "APPROVE", 
                      "NFTAPPROVE", "TRANSFERFROM", "NFTTRANSFERFROM", "CUSTOM", 
                      "MSGSENDER", "CALCDATA", "SHA3", "SLOAD", "MLOAD", 
                      "MSTORE", "LENGTH", "CONCAT", "SSTORE", "K", "BITVEC_K", 
                      "INT_TYPE", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", 
                      "BITXOR", "SHL", "SHR", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "COMMA", "SEMI", "ASSIGN", 
                      "INT_LITERAL", "HEX_LITERAL", "Identifier", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_stmt = 2
    RULE_exprStmt = 3
    RULE_letStmt = 4
    RULE_block = 5
    RULE_paramList = 6
    RULE_ethtransfer = 7
    RULE_transfer = 8
    RULE_approve = 9
    RULE_nftApprove = 10
    RULE_transferFrom = 11
    RULE_nftTransferFrom = 12
    RULE_customStmt = 13
    RULE_ifStmt = 14
    RULE_forStmt = 15
    RULE_expr = 16
    RULE_primary = 17
    RULE_arrayLiteral = 18
    RULE_literalList = 19
    RULE_type = 20
    RULE_literal = 21

    ruleNames =  [ "program", "decl", "stmt", "exprStmt", "letStmt", "block", 
                   "paramList", "ethtransfer", "transfer", "approve", "nftApprove", 
                   "transferFrom", "nftTransferFrom", "customStmt", "ifStmt", 
                   "forStmt", "expr", "primary", "arrayLiteral", "literalList", 
                   "type", "literal" ]

    EOF = Token.EOF
    ArithOp=1
    RelOp=2
    BitOp=3
    DEF=4
    LET=5
    IF=6
    ELSE=7
    FOR=8
    TRANSFERETH=9
    TRANSFER=10
    APPROVE=11
    NFTAPPROVE=12
    TRANSFERFROM=13
    NFTTRANSFERFROM=14
    CUSTOM=15
    MSGSENDER=16
    CALCDATA=17
    SHA3=18
    SLOAD=19
    MLOAD=20
    MSTORE=21
    LENGTH=22
    CONCAT=23
    SSTORE=24
    K=25
    BITVEC_K=26
    INT_TYPE=27
    PLUS=28
    MINUS=29
    MUL=30
    DIV=31
    MOD=32
    EQ=33
    NEQ=34
    LT=35
    GT=36
    LE=37
    GE=38
    AND=39
    OR=40
    BITXOR=41
    SHL=42
    SHR=43
    LPAREN=44
    RPAREN=45
    LBRACE=46
    RBRACE=47
    LBRACK=48
    RBRACK=49
    COMMA=50
    SEMI=51
    ASSIGN=52
    INT_LITERAL=53
    HEX_LITERAL=54
    Identifier=55
    WS=56
    LINE_COMMENT=57
    BLOCK_COMMENT=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(duduDSLParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.DeclContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.DeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.StmtContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.StmtContext,i)


        def getRuleIndex(self):
            return duduDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = duduDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 27320665061195632) != 0):
                self.state = 46
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 44
                    self.decl()
                    pass
                elif token in [5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 44, 48, 53, 54]:
                    self.state = 45
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(duduDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(duduDSLParser.DEF, 0)

        def Identifier(self):
            return self.getToken(duduDSLParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(duduDSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(duduDSLParser.RPAREN, 0)

        def ASSIGN(self):
            return self.getToken(duduDSLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(duduDSLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(duduDSLParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(duduDSLParser.ParamListContext,0)


        def getRuleIndex(self):
            return duduDSLParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = duduDSLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(duduDSLParser.DEF)
            self.state = 54
            self.match(duduDSLParser.Identifier)
            self.state = 55
            self.match(duduDSLParser.LPAREN)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 27320665061130240) != 0):
                self.state = 56
                self.paramList()


            self.state = 59
            self.match(duduDSLParser.RPAREN)
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.state = 60
                self.match(duduDSLParser.ASSIGN)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(duduDSLParser.SEMI)
                pass
            elif token in [46]:
                self.state = 64
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ethtransfer(self):
            return self.getTypedRuleContext(duduDSLParser.EthtransferContext,0)


        def transfer(self):
            return self.getTypedRuleContext(duduDSLParser.TransferContext,0)


        def approve(self):
            return self.getTypedRuleContext(duduDSLParser.ApproveContext,0)


        def nftApprove(self):
            return self.getTypedRuleContext(duduDSLParser.NftApproveContext,0)


        def transferFrom(self):
            return self.getTypedRuleContext(duduDSLParser.TransferFromContext,0)


        def nftTransferFrom(self):
            return self.getTypedRuleContext(duduDSLParser.NftTransferFromContext,0)


        def customStmt(self):
            return self.getTypedRuleContext(duduDSLParser.CustomStmtContext,0)


        def letStmt(self):
            return self.getTypedRuleContext(duduDSLParser.LetStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(duduDSLParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(duduDSLParser.ForStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(duduDSLParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return duduDSLParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = duduDSLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.ethtransfer()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.transfer()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.approve()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.nftApprove()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.transferFrom()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.nftTransferFrom()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.customStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.letStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.ifStmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 10)
                self.state = 76
                self.forStmt()
                pass
            elif token in [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 44, 48, 53, 54]:
                self.enterOuterAlt(localctx, 11)
                self.state = 77
                self.exprStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(duduDSLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = duduDSLParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.expr(0)
            self.state = 81
            self.match(duduDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(duduDSLParser.LET, 0)

        def Identifier(self):
            return self.getToken(duduDSLParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(duduDSLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(duduDSLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStmt" ):
                return visitor.visitLetStmt(self)
            else:
                return visitor.visitChildren(self)




    def letStmt(self):

        localctx = duduDSLParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(duduDSLParser.LET)
            self.state = 84
            self.match(duduDSLParser.Identifier)
            self.state = 85
            self.match(duduDSLParser.ASSIGN)
            self.state = 86
            self.expr(0)
            self.state = 87
            self.match(duduDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(duduDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(duduDSLParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.StmtContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.StmtContext,i)


        def getRuleIndex(self):
            return duduDSLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = duduDSLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(duduDSLParser.LBRACE)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 27320665061195616) != 0):
                self.state = 90
                self.stmt()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(duduDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(duduDSLParser.COMMA)
            else:
                return self.getToken(duduDSLParser.COMMA, i)

        def getRuleIndex(self):
            return duduDSLParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = duduDSLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.expr(0)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==50:
                self.state = 99
                self.match(duduDSLParser.COMMA)
                self.state = 100
                self.expr(0)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EthtransferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFERETH(self):
            return self.getToken(duduDSLParser.TRANSFERETH, 0)

        def LPAREN(self):
            return self.getToken(duduDSLParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(duduDSLParser.COMMA)
            else:
                return self.getToken(duduDSLParser.COMMA, i)

        def RPAREN(self):
            return self.getToken(duduDSLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_ethtransfer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEthtransfer" ):
                listener.enterEthtransfer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEthtransfer" ):
                listener.exitEthtransfer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEthtransfer" ):
                return visitor.visitEthtransfer(self)
            else:
                return visitor.visitChildren(self)




    def ethtransfer(self):

        localctx = duduDSLParser.EthtransferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ethtransfer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(duduDSLParser.TRANSFERETH)
            self.state = 107
            self.match(duduDSLParser.LPAREN)
            self.state = 108
            self.expr(0)
            self.state = 109
            self.match(duduDSLParser.COMMA)
            self.state = 110
            self.expr(0)
            self.state = 111
            self.match(duduDSLParser.COMMA)
            self.state = 112
            self.expr(0)
            self.state = 113
            self.match(duduDSLParser.RPAREN)
            self.state = 114
            self.match(duduDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFER(self):
            return self.getToken(duduDSLParser.TRANSFER, 0)

        def LPAREN(self):
            return self.getToken(duduDSLParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(duduDSLParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(duduDSLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_transfer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransfer" ):
                listener.enterTransfer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransfer" ):
                listener.exitTransfer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransfer" ):
                return visitor.visitTransfer(self)
            else:
                return visitor.visitChildren(self)




    def transfer(self):

        localctx = duduDSLParser.TransferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_transfer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(duduDSLParser.TRANSFER)
            self.state = 117
            self.match(duduDSLParser.LPAREN)
            self.state = 118
            self.expr(0)
            self.state = 119
            self.match(duduDSLParser.COMMA)
            self.state = 120
            self.expr(0)
            self.state = 121
            self.match(duduDSLParser.RPAREN)
            self.state = 122
            self.match(duduDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApproveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def APPROVE(self):
            return self.getToken(duduDSLParser.APPROVE, 0)

        def LPAREN(self):
            return self.getToken(duduDSLParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(duduDSLParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(duduDSLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_approve

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApprove" ):
                listener.enterApprove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApprove" ):
                listener.exitApprove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApprove" ):
                return visitor.visitApprove(self)
            else:
                return visitor.visitChildren(self)




    def approve(self):

        localctx = duduDSLParser.ApproveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_approve)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(duduDSLParser.APPROVE)
            self.state = 125
            self.match(duduDSLParser.LPAREN)
            self.state = 126
            self.expr(0)
            self.state = 127
            self.match(duduDSLParser.COMMA)
            self.state = 128
            self.expr(0)
            self.state = 129
            self.match(duduDSLParser.RPAREN)
            self.state = 130
            self.match(duduDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NftApproveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NFTAPPROVE(self):
            return self.getToken(duduDSLParser.NFTAPPROVE, 0)

        def LPAREN(self):
            return self.getToken(duduDSLParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(duduDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(duduDSLParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(duduDSLParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(duduDSLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(duduDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return duduDSLParser.RULE_nftApprove

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNftApprove" ):
                listener.enterNftApprove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNftApprove" ):
                listener.exitNftApprove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNftApprove" ):
                return visitor.visitNftApprove(self)
            else:
                return visitor.visitChildren(self)




    def nftApprove(self):
